# deep-learning-project

./: README.md  pyproject.toml
rag/: __init__.py  demo.ipynb  main.ipynb  template.ipynb
rag/assets/: fastembed_dense_models.json  fastembed_reranking_models.json  fastembed_sparse_models.json
rag/base/: __init__.py  repository.py
rag/models/: __init__.py  config.py  evaluation.py  metadata.py  search.py
rag/repositories/: __init__.py  repository.py
rag/utils/: __init__.py  evaluator.py  loader.py  ranx.py
