[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Luka958 <lp53523@fer.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = "^3.8"
qdrant-client = "^1.12.2"
ipywidgets = "^8.1.5"
datasets = "^3.2.0"
openai = "^1.59.3"
onnxruntime-gpu = "^1.20.1"
fastembed-gpu = "^0.5.0"
ranx = "^0.3.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
